# kuru-kuru-rin

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  kkr-color.hpp  kkr-grapharea.cpp  kkr-grapharea.hpp  kkr-hypercube.cpp  kkr-hypercube.hpp  kkr-main.cpp  kkr-mainwindow.cpp  kkr-mainwindow.hpp  kkr-newspacedialog.cpp  kkr-newspacedialog.hpp  kkr-rotationconfigdialog.cpp  kkr-rotationconfigdialog.hpp  kkr-viewconfig.cpp  kkr-viewconfig.hpp
